--- a/NeighborhoodHistory/Info.plist
+++ b/NeighborhoodHistory/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>AR requires camera access</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>To access your location in app to center map and show local points of interest</string>
 	<key>CFBundleDevelopmentRegion</key>
