Revert "Added data storage functionality and map pulls from database (current error at runtime)"
This reverts commit 9cb5b008d666708a844656bb51791626b1ce4083.

--- a/NeighborhoodHistory/Info.plist
+++ b/NeighborhoodHistory/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Augmented Reality experience requires camera access</string>
+	<string>AR requires camera access</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location access is required to find points of interest near you</string>
+	<string>To access your location in app to center map and show local points of interest</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
